Correcao na geracao do .zip: nao trocar CR por LF para nao alterar binarios.

--- a/compat/src/Makefile
+++ b/compat/src/Makefile
@@ -9,7 +9,7 @@ SRCS= Makefile \
 
 dist: dist_dir
 	tar -czf $(TAR_FILE) $(DIST_DIR)
-	zip -lq $(ZIP_FILE) $(DIST_DIR)/*
+	zip -rq $(ZIP_FILE) $(DIST_DIR)/*
 	rm -rf $(DIST_DIR)
 
 clean:
